[package]
name = "vsock"
version = "0.2.5"
authors = ["fsyncd", "rust-vsock"]
description = "Virtio socket support for Rust"
repository = "https://github.com/rust-vsock/vsock-rs"
homepage = "https://github.com/rust-vsock/vsock-rs"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"
exclude = ["test_fixture"]

[dependencies]
libc = { version = "0.2.79", default-features = false, features = ["rustc-std-workspace-core"] }
nix = { version = "0.22.1", optional = true }
getrandom = { version = "0.2.3", optional = true }

[dev-dependencies]
rand = "0.8.3"
sha2 = ">=0.8.0"
serde_cbor = "0.11.2"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["std", "random_port"]
random_port = ["getrandom"]
std = ["libc/std", "nix"]
